# ezra-klein-books

./: .gitignore  .python-version  README.md  docker-compose.yaml  makefile  pyproject.toml  setup_database.sh
deployment/: server-entrypoint.sh  worker-entrypoint.sh
docker/django/: Dockerfile
docker/postgres/: Dockerfile  init.sh
ezra/: admin.py  apps.py  enums.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
ezra/migrations/: 0001_enable_pgvector.py  0001_initial.py  0002_initial.py
mysite/: celery.py  settings.py  urls.py
mysite/settings/: base.py  local.py  production.py
notebooks/: Untitled.ipynb
